--- a/2.DynamoCraft.UI/src/app/modules/utilisateur/components/profil-prive/bibliotheques/bibliotheques.component.html
+++ b/2.DynamoCraft.UI/src/app/modules/utilisateur/components/profil-prive/bibliotheques/bibliotheques.component.html
@@ -13,14 +13,14 @@
                             <!-- Colonne Nom -->
                             <th scope="col" (click)="sortData('nom', 'addedModels')" colspan="2">
                                 Nom
-                                <i [class]="getSortIcon('nom', 'addedModels')" class="fs-3 text-warning ms-2"></i>
+                                <i [class]="getSortIcon('nom')" class="fs-3 text-warning ms-2"></i>
                             </th>
                             <!-- Colonne Commentaire Admin -->
                             <th scope="col" colspan="2">Commentaire Admin</th>
                             <!-- Colonne Statut -->
                             <th scope="col" (click)="sortData('statut.nom', 'addedModels')">
                                 Statut
-                                <i [class]="getSortIcon('statut.nom', 'addedModels')"
+                                <i [class]="getSortIcon('statut.nom')"
                                     class="fs-3 text-success ms-2"></i>
                             </th>
                             <th scope="col">Détails</th>
