--- a/2.DynamoCraft.UI/src/app/components/top-10/top-10.component.html
+++ b/2.DynamoCraft.UI/src/app/components/top-10/top-10.component.html
@@ -1,81 +1,93 @@
-<div class="container min-vh-75 bg-dc-2 py-5 rounded-3">
-    <h1 class="font-dc text-center text-warning mb-4">Top 10 Projets Les Plus Likés</h1>
-    <div class="row g-4 justify-content-center">
-        <div *ngFor="let projet of top10LikedProjects; let i = index" class="col-12 d-flex align-items-stretch">
-            <a routerLink="/projet/detail/{{ projet.id }}" class="text-decoration-none w-100 col-lg-10">
-                <div
-                    class="card-hover p-4 shadow-lg rounded-custom position-relative h-100 text-center border-0 bg-gradient">
-                    <div class="row g-0 align-items-center h-100">
-
-                        <!-- Numéro de classement avec icône trophée -->
-                        <div class="col-1 d-flex justify-content-center align-items-center pe-3">
-                            <div class="d-flex flex-column align-items-center">
-                                <div class="number-circle d-flex justify-content-center align-items-center text-white rounded-circle"
-                                    style="width: 60px; height: 60px; background-color: getRankColor(i);">
-                                    <h4 class="m-0">{{ i + 1 }}</h4>
-                                </div>
-                                <i *ngIf="i < 3" class="bi" [ngClass]="{
-                                    'bi-trophy-fill': i === 0,
-                                    'bi-trophy': i === 1,
-                                    'bi-award': i === 2
-                                }" style="font-size: 2rem; color: getRankColor(i); margin-top: 10px;"></i>
-                            </div>
-                        </div>
-
-                        <!-- Image du projet -->
-                        <div class="col-1">
-                            <div class="project-image-wrapper position-relative" style="width: 150px; height: 150px;">
-                                <img *ngIf="projet.imageProjet && projet.imageProjet.length > 0"
-                                    [src]="url + projet.imageProjet[0].nom"
-                                    class="img-fluid rounded-circle shadow-sm position-absolute top-0 start-0 w-100 h-100"
-                                    alt="Image du projet" style="object-fit: cover;">
-                                <div *ngIf="!projet.imageProjet || projet.imageProjet.length === 0"
-                                    class="img-placeholder d-flex justify-content-center align-items-center rounded-circle bg-light position-absolute top-0 start-0 w-100 h-100">
-                                    <i class="bi bi-image text-muted" style="font-size: 3rem;"></i>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Détails du projet -->
-                        <div class="col-6 text-start ps-3">
-                            <h5 class="mb-2 font-dc text-warning">{{ projet.nom | slice: 0: 20 }}...</h5>
-                            <p class="text-white p-3 bg-dc-2 rounded shadow-sm">
-                                {{ projet.description | slice: 0: 255 }}...
-                            </p>
-                            <!-- Catégorie du projet -->
-                            <div class="badge bg-warning text-dark rounded-pill mt-2 d-flex align-items-center">
-                                <img src="assets/png/Categories/{{projet.categorie?.nom}}.png"
-                                    alt="{{projet.categorie?.nom}}" class="me-2" style="width: 20px; height: 20px;">
-                                {{ projet.categorie?.nom }}
-                            </div>
-                        </div>
-
-                        <!-- Profil de l'utilisateur -->
-                        <div class="col-2 text-end">
-                            <a [routerLink]="['utilisateur/profil', projet.utilisateur.id]" class="text-decoration-none">
+<div class="hauteur-70 bg-dc-2 rounded-3">
+    <ng-container *ngIf="top10LikedProjects.length > 0; else noTop10ProjectsTemplate">
+        <div class="row g-4 justify-content-center">
+            <div *ngFor="let projet of top10LikedProjects; let i = index" class="col-12 d-flex align-items-stretch">
+                <a routerLink="/projet/detail/{{ projet.id }}" class="text-decoration-none w-100 col-lg-10">
+                    <div
+                        class="card-hover p-4 shadow-lg rounded-custom position-relative h-100 text-center border-0 bg-gradient">
+                        <div class="row g-0 align-items-center h-100">
+                            <!-- Numéro de classement avec icône trophée -->
+                            <div class="col-1 d-flex justify-content-center align-items-center pe-3">
                                 <div class="d-flex flex-column align-items-center">
-                                    <div *ngIf="projet.utilisateur && projet.utilisateur.imageUtilisateur"
-                                        class="profile-circle d-flex justify-content-center align-items-center text-dark rounded-circle shadow-sm"
-                                        style="width: 80px; height: 80px;">
-                                        <img [src]="url + projet.utilisateur.imageUtilisateur.nom"
-                                            alt="Image de l'utilisateur" class="rounded-circle"
-                                            style="width: 70px; height: 70px; object-fit: cover;">
+                                    <div class="number-circle d-flex justify-content-center align-items-center text-white rounded-circle"
+                                        style="width: 60px; height: 60px; background-color: getRankColor(i);">
+                                        <h4 class="m-0">{{ i + 1 }}</h4>
                                     </div>
-                                    <div *ngIf="!projet.utilisateur || !projet.utilisateur.imageUtilisateur"
-                                        class="profile-circle d-flex justify-content-center align-items-center bg-light text-dark rounded-circle shadow-sm"
-                                        style="width: 80px; height: 80px;">
-                                        <i class="bi bi-person-circle" style="font-size: 3rem;"></i>
-                                    </div>
-                                    <span class="text-center font-dc text-warning mt-2">
-                                        {{ projet.utilisateur.pseudo | slice:0:20 || 'Utilisateur inconnu' }}...
-                                    </span>
+                                    <i *ngIf="i < 3" class="bi" [ngClass]="{
+                                        'bi-trophy-fill': i === 0,
+                                        'bi-trophy': i === 1,
+                                        'bi-award': i === 2
+                                    }" style="font-size: 2rem; color: getRankColor(i); margin-top: 10px;"></i>
                                 </div>
-                            </a>
-                        </div>
+                            </div>
 
+                            <!-- Image du projet -->
+                            <div class="col-1">
+                                <div class="project-image-wrapper position-relative"
+                                    style="width: 150px; height: 150px;">
+                                    <img *ngIf="projet.imageProjet && projet.imageProjet.length > 0"
+                                        [src]="url + projet.imageProjet[0].nom"
+                                        class="img-fluid rounded-circle shadow-sm position-absolute top-0 start-0 w-100 h-100"
+                                        alt="Image du projet" style="object-fit: cover;">
+                                    <div *ngIf="!projet.imageProjet || projet.imageProjet.length === 0"
+                                        class="img-placeholder d-flex justify-content-center align-items-center rounded-circle bg-light position-absolute top-0 start-0 w-100 h-100">
+                                        <i class="bi bi-image text-muted" style="font-size: 3rem;"></i>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Détails du projet -->
+                            <div class="col-6 text-start ps-3">
+                                <h5 class="mb-2 font-dc text-warning">{{ projet.nom | slice: 0: 20 }}...</h5>
+                                <p class="text-white p-3 bg-dc-2 rounded shadow-sm">
+                                    {{ projet.description | slice: 0: 255 }}...
+                                </p>
+                                <!-- Catégorie du projet -->
+                                <div class="badge bg-warning text-dark rounded-pill mt-2 d-flex align-items-center">
+                                    <img src="assets/png/Categories/{{projet.categorie?.nom}}.png"
+                                        alt="{{projet.categorie?.nom}}" class="me-2" style="width: 20px; height: 20px;">
+                                    {{ projet.categorie?.nom }}
+                                </div>
+                            </div>
+
+                            <!-- Profil de l'utilisateur -->
+                            <div class="col-2 text-end">
+                                <a [routerLink]="['utilisateur/profil', projet.utilisateur.id]"
+                                    class="text-decoration-none">
+                                    <div class="d-flex flex-column align-items-center">
+                                        <div *ngIf="projet.utilisateur && projet.utilisateur.imageUtilisateur"
+                                            class="profile-circle d-flex justify-content-center align-items-center text-dark rounded-circle shadow-sm"
+                                            style="width: 80px; height: 80px;">
+                                            <img [src]="url + projet.utilisateur.imageUtilisateur.nom"
+                                                alt="Image de l'utilisateur" class="rounded-circle"
+                                                style="width: 70px; height: 70px; object-fit: cover;">
+                                        </div>
+                                        <div *ngIf="!projet.utilisateur || !projet.utilisateur.imageUtilisateur"
+                                            class="profile-circle d-flex justify-content-center align-items-center bg-light text-dark rounded-circle shadow-sm"
+                                            style="width: 80px; height: 80px;">
+                                            <i class="bi bi-person-circle" style="font-size: 3rem;"></i>
+                                        </div>
+                                        <span class="text-center font-dc text-warning mt-2">
+                                            {{ projet.utilisateur.pseudo | slice:0:20 || 'Utilisateur inconnu' }}...
+                                        </span>
+                                    </div>
+                                </a>
+                            </div>
+
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
+            </div>
         </div>
-    </div>
+    </ng-container>
+
+    <!-- Template pour aucun projet liké (Top 10) -->
+    <ng-template #noTop10ProjectsTemplate>
+        <div class="d-flex flex-column justify-content-center align-items-center text-center p-5 border border-warning"
+            style="height: 70vh;">
+            <i class="bi bi-trophy-fill text-warning" style="font-size: 4rem;"></i>
+            <h5 class="text-warning mt-4">Aucun projet liké pour le moment.</h5>
+        </div>
+    </ng-template>
+
 </div>
