--- a/2.DynamoCraft.UI/src/app/modules/admin/components/panel-admin/projets/projets.component.html
+++ b/2.DynamoCraft.UI/src/app/modules/admin/components/panel-admin/projets/projets.component.html
@@ -12,8 +12,8 @@
                     <li><button class="dropdown-item" (click)="setFilter('invalide')">Invalides</button></li>
                     <li><button class="dropdown-item" (click)="setFilter('attente')">En attente</button></li>
                 </ul>
-                <input type="text" class="form-control text-white border-warning"
-                    placeholder="Rechercher un projet..." [(ngModel)]="searchTerm" (input)="filterProjets()">
+                <input type="text" class="form-control text-white border-warning" placeholder="Rechercher un projet..."
+                    [(ngModel)]="searchTerm" (input)="filterProjets()">
                 <button class="btn btn-outline-warning" type="button">
                     <i class="bi bi-search"></i>
                 </button>
@@ -63,10 +63,12 @@
                     </table>
                 </ng-container>
 
+                <!-- Template pour aucun projet liké (Top 10) -->
                 <ng-template #noProjectsTemplate>
-                    <div class="no-projects p-5 text-center border border-warning">
-                        <i class="bi bi-folder-x-fill text-warning display-3"></i>
-                        <h5 class="text-warning mt-4">Aucun projet trouvé.</h5>
+                    <div class="d-flex flex-column justify-content-center align-items-center text-center p-5 border border-warning"
+                        style="height: 70vh;">
+                        <i class="bi bi-trophy-fill text-warning" style="font-size: 4rem;"></i>
+                        <h5 class="text-warning mt-4">Aucun projet projet trouvé.</h5>
                     </div>
                 </ng-template>
             </div>
