--- a/2.DynamoCraft.UI/src/app/modules/utilisateur/components/profil/profil.component.html
+++ b/2.DynamoCraft.UI/src/app/modules/utilisateur/components/profil/profil.component.html
@@ -9,7 +9,7 @@
             </div>
             <div class="col-lg-8">
                 <div class="d-flex flex-column align-items-start justify-content-center">
-                    <h2 class="text-warning font-dc display-4">{{ utilisateur?.pseudo |slice:0:20 }}...</h2>
+                    <h2 class="text-warning font-dc display-4">{{ utilisateur?.pseudo | slice: 0:20 }}...</h2>
                     <p class="text-warning lead">Membre depuis {{ utilisateur?.dateInscription | date: 'MMMM yyyy' }}
                     </p>
                     <div class="d-flex mt-3">
@@ -24,7 +24,7 @@
             </div>
         </div>
 
-        <!-- Statistiques de l'utilisateur (ligne 1) -->
+        <!-- Statistiques de l'utilisateur -->
         <div class="row text-center mb-5">
             <div class="col-md-4 mb-4">
                 <div class="card bg-dark text-white p-4 rounded-custom shadow-lg">
@@ -49,55 +49,36 @@
             </div>
         </div>
 
-        <!-- Biographie -->
-        <div class="row mb-5">
-            <div class="col-lg-12 mb-4">
-                <div class="card bg-dc p-4 rounded-custom shadow-lg hauteur-30">
-                    <h5 class="text-warning">Biographie</h5>
-                    <p>{{ utilisateur?.biographie }}</p>
-                </div>
-            </div>
-        </div>
-
-        <!-- Intérêts -->
-        <div class="row mb-5">
-            <div class="col-lg-12 mb-4">
-                <div class="card bg-dc p-4 rounded-custom shadow-lg hauteur-30">
-                    <h5 class="text-warning">Intérêts</h5>
-                    <p>{{ utilisateur?.centreInterets }}</p>
-                </div>
-            </div>
-        </div>
-
-        <!-- Projets récents (ligne 3) -->
+        <!-- Projets récents -->
         <div class="row">
             <h3 class="text-warning text-uppercase font-dc mb-4">Projets Récents</h3>
-            <ng-container *ngIf="utilisateur?.projet && utilisateur!.projet!.length > 0; else noProjectsTemplate">
+            <ng-container *ngIf="utilisateur?.projet && utilisateur?.projet!.length > 0; else noProjectsTemplate">
                 <div class="row g-4">
-                    <div class="col-12 col-md-6 col-lg-4" *ngFor="let projet of (utilisateur?.projet | slice:0:3);">
-                        <a [routerLink]="['/projet/detail/', projet.id]" class="text-decoration-none">
-                            <div
-                                class="card-hover image-container card h-100 text-center shadow-sm border-0 couleur-fond-2 rounded-custom position-relative overflow-hidden">
-                                <ng-container
-                                    *ngIf="projet.imageProjet && projet.imageProjet.length > 0; else noImageTemplate">
-                                    <img [src]="url + projet.imageProjet[0].nom" class="card-img-top rounded"
-                                        alt="Image du projet" style="width: 100%; height: 350px; object-fit: cover;">
-                                </ng-container>
-                                <ng-template #noImageTemplate>
-                                    <p class="text-muted">Pas d'image disponible</p>
-                                </ng-template>
-                                <div class="hover-content d-flex justify-content-center align-items-center">
-                                    <i class="bi bi-eye text-white" style="font-size: 2rem;"></i>
-                                    <p class="file-name text-white text-center mt-2">{{ projet.nom | slice:0:20 }}...
-                                    </p>
+                    <div class="col-12 col-md-6 col-lg-4" *ngFor="let projet of utilisateur!.projet | slice:0:3">
+                        <ng-container *ngIf="projet.estvalide">
+                            <a [routerLink]="['/projet/detail/', projet.id]" class="text-decoration-none">
+                                <div
+                                    class="card-hover image-container card h-100 text-center shadow-sm border-0 couleur-fond-2 rounded-custom position-relative overflow-hidden">
+                                    <ng-container
+                                        *ngIf="projet.imageProjet && projet.imageProjet.length > 0; else noImageTemplate">
+                                        <img [src]="url + projet.imageProjet[0].nom" class="card-img-top rounded"
+                                            alt="Image du projet"
+                                            style="width: 100%; height: 350px; object-fit: cover;">
+                                    </ng-container>
+                                    <ng-template #noImageTemplate>
+                                        <p class="text-muted">Pas d'image disponible</p>
+                                    </ng-template>
+                                    <div class="hover-content d-flex justify-content-center align-items-center">
+                                        <i class="bi bi-eye text-white" style="font-size: 2rem;"></i>
+                                        <p class="file-name text-white text-center mt-2">{{ projet.nom | slice: 0:20
+                                            }}...</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
+                            </a>
+                        </ng-container>
                     </div>
                 </div>
             </ng-container>
-
-            <!-- Template affiché lorsqu'il n'y a aucun projet -->
             <ng-template #noProjectsTemplate>
                 <div class="no-projects p-5 text-center border border-warning">
                     <i class="bi bi-folder-fill text-warning display-3"></i>
