✅ Commit 47 ✅ voir eratum

--- a/2.DynamoCraft.UI/src/app/components/home/home.component.html
+++ b/2.DynamoCraft.UI/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid min-vh-100 bg-dc-2 d-flex flex-column justify-content-center align-items-center">
+<div class="bg-dc-2 d-flex flex-column justify-content-center align-items-center">
 
     <div class="hero text-center py-5 banner-image col-lg-12">
         <h1 class="font-dc text-warning">Bienvenue sur DynamoCraft</h1>
