--- a/2.DynamoCraft.UI/src/app/modules/utilisateur/components/profil-prive/details/details.component.html
+++ b/2.DynamoCraft.UI/src/app/modules/utilisateur/components/profil-prive/details/details.component.html
@@ -30,6 +30,7 @@
 
             <div class="d-grid gap-2 mt-4">
                 <button class="btn btn-warning mb-3" (click)="resetPassword()">Réinitialisation mot de passe</button>
+                <button class="btn btn-warning mb-3" (click)="deleteAccount()">Supprimer mon compte</button>
             </div>
         </div>
     </div>
