--- a/2.DynamoCraft.UI/src/app/components/nouveautes/nouveautes.component.html
+++ b/2.DynamoCraft.UI/src/app/components/nouveautes/nouveautes.component.html
@@ -1,4 +1,4 @@
-<div class="hauteur-70 bg-dc-2 rounded-3">
+<div class="bg-dc-2 rounded-3">
 
     <!-- Vérification si la liste est vide -->
     <ng-container *ngIf="nouveautes && nouveautes.length > 0; else noNouveautesTemplate">
