--- a/2.DynamoCraft.UI/src/app/components/recherche/recherche.component.html
+++ b/2.DynamoCraft.UI/src/app/components/recherche/recherche.component.html
@@ -26,14 +26,14 @@
                 </li>
             </ul>
             <button class="btn btn-warning shadow-sm" type="button" (click)="onSearch()">
-                <i class="bi bi-search"></i>
+                <i class="bi bi-search text-light"></i>
             </button>
         </div>
     </div>
 </div>
 
 <!-- Section de résultats -->
-<div class="hauteur-70 bg-dc-2 rounded-3">
+<div class="bg-dc-2 rounded-3">
     <!-- Affichage des projets ou message si aucun projet trouvé -->
     <div *ngIf="projects.length > 0; else noProjects"
         class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 justify-content-center">
