--- a/2.DynamoCraft.UI/src/app/components/top-10/top-10.component.html
+++ b/2.DynamoCraft.UI/src/app/components/top-10/top-10.component.html
@@ -1,4 +1,4 @@
-<div class="hauteur-70 bg-dc-2 rounded-3">
+<div class="bg-dc-2 rounded-3">
     <ng-container *ngIf="top10LikedProjects.length > 0; else noTop10ProjectsTemplate">
         <div class="row g-4 justify-content-center">
             <div *ngFor="let projet of top10LikedProjects; let i = index" class="col-12 d-flex align-items-stretch">
