--- a/2.DynamoCraft.UI/src/app/modules/utilisateur/components/profil/profil.component.html
+++ b/2.DynamoCraft.UI/src/app/modules/utilisateur/components/profil/profil.component.html
@@ -55,28 +55,27 @@
             <ng-container *ngIf="utilisateur?.projet && utilisateur?.projet!.length > 0; else noProjectsTemplate">
                 <div class="row g-4">
                     <div class="col-12 col-md-6 col-lg-4" *ngFor="let projet of utilisateur!.projet | slice:0:3">
-                        <ng-container *ngIf="projet.estvalide">
-                            <a [routerLink]="['/projet/detail/', projet.id]" class="text-decoration-none">
-                                <div
-                                    class="card-hover image-container card h-100 text-center shadow-sm border-0 couleur-fond-2 rounded-custom position-relative overflow-hidden">
-                                    <ng-container
-                                        *ngIf="projet.imageProjet && projet.imageProjet.length > 0; else noImageTemplate">
-                                        <img [src]="url + projet.imageProjet[0].nom" class="card-img-top rounded"
-                                            alt="Image du projet"
-                                            style="width: 100%; height: 350px; object-fit: cover;">
-                                    </ng-container>
-                                    <ng-template #noImageTemplate>
-                                        <p class="text-muted">Pas d'image disponible</p>
-                                    </ng-template>
-                                    <div class="hover-content d-flex justify-content-center align-items-center">
-                                        <i class="bi bi-eye text-white" style="font-size: 2rem;"></i>
-                                        <p class="file-name text-white text-center mt-2">{{ projet.nom | slice: 0:20
-                                            }}...</p>
-                                    </div>
+                        <a [routerLink]="['/projet/detail/', projet.id]" class="text-decoration-none">
+                            <div
+                                class="card-hover image-container card h-100 text-center shadow-sm border-0 couleur-fond-2 rounded-custom position-relative overflow-hidden">
+                                <!-- Afficher les projets même si estvalide n'est pas vérifié -->
+                                <ng-container
+                                    *ngIf="projet.imageProjet && projet.imageProjet.length > 0; else noImageTemplate">
+                                    <img [src]="url + projet.imageProjet[0].nom" class="card-img-top rounded"
+                                        alt="Image du projet" style="width: 100%; height: 350px; object-fit: cover;">
+                                </ng-container>
+                                <ng-template #noImageTemplate>
+                                    <p class="text-muted">Pas d'image disponible</p>
+                                </ng-template>
+                                <div class="hover-content d-flex justify-content-center align-items-center">
+                                    <i class="bi bi-eye text-white" style="font-size: 2rem;"></i>
+                                    <p class="file-name text-white text-center mt-2">{{ projet.nom | slice: 0:20 }}...
+                                    </p>
                                 </div>
-                            </a>
-                        </ng-container>
+                            </div>
+                        </a>
                     </div>
+
                 </div>
             </ng-container>
             <ng-template #noProjectsTemplate>
